Add MySql db and Cookies

--- a/resources/fragments/layout.html
+++ b/resources/fragments/layout.html
@@ -11,6 +11,10 @@
     <div th:replace="${content}"></div>
 </div>
 
-<div th:replace="~{fragments/head :: body}"></div>
+<div id="content" th:replace="~{fragments/head :: body}"></div>
+
+<footer>
+    7c4f785315f523e35f3c5d1f81306473e75508dc
+</footer>
 </body>
 </html>
