--- a/resources/fragments/navbar.html
+++ b/resources/fragments/navbar.html
@@ -1,42 +1,52 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
+
 <head>
-    <meta charset="UTF-8">
-    <title>Navbar</title>
+  <meta charset="UTF-8">
+  <title>Navbar</title>
 </head>
+
 <body th:fragment="navbar">
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/">Ye Shoppe</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="/">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/products">Products</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="/cart">Cart</a>
-                </li>
-            </ul>
-            <span class="navbar-text mr-4" th:text="${user.name}"></span>
-            <ul class="navbar-nav mx-2">
-                <li class="nav-item">
-                    <a href="/login"><button class="btn btn-primary">Login</button></a>
-                </li>
-            </ul>
-<!--            <form class="d-flex" role="search">-->
-<!--                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">-->
-<!--                <button class="btn btn-outline-success" type="submit">Search</button>-->
-<!--            </form>-->
-        </div>
+      <a class="navbar-brand" href="/">Ye Shoppe</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/products">Products</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/cart">Cart</a>
+          </li>
+          <li th:if="${user.id}" class="nav-item">
+            <a class="nav-link" href="/orders">Orders</a>
+          </li>
+        </ul>
+
+        <span class="navbar-text mr-4" th:if="${user.id}" th:text="${user.name}"></span>
+
+        <ul class="navbar-nav mx-2">
+          <li class="nav-item" th:if="${user.id}">
+            <a href="/signout"><button class="btn btn-primary">Sign out</button></a>
+          </li>
+          <li class="nav-item" th:unless="${user.id}">
+            <a href="/signup"><button class="btn btn-primary">Sign up</button></a>
+          </li>
+          <li class="nav-item" th:unless="${user.id}">
+            <a href="/login"><button class="btn btn-primary">Login</button></a>
+          </li>
+        </ul>
+      </div>
     </div>
-</nav>
+  </nav>
 
 </body>
+
 </html>
